[gd_scene load_steps=2 format=3 uid="uid://dbcudtme76aba"]

[ext_resource type="Script" uid="uid://ys8pfc1ujq5d" path="res://scripts/ui/game_over.gd" id="1"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 96.0
offset_top = 96.0
offset_right = -96.0
offset_bottom = -96.0
mouse_filter = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 0
theme_override_constants/separation = 32
alignment = 1

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeathCountLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Deaths: 0"
horizontal_alignment = 1

[node name="ButtonRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 24
alignment = 1

[node name="RetryButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Retry"

[node name="MenuButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Menu"
